--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,16 @@ anyio==4.2.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+colorzero==2.0
 distro==1.9.0
 exceptiongroup==1.2.0
+gpiozero==2.0.1
 h11==0.14.0
 httpcore==1.0.3
 httpx==0.26.0
 idna==3.6
+importlib-metadata==4.13.0
+importlib-resources==5.13.0
 numpy==1.26.4
 openai==1.12.0
 PyAudio==0.2.14
@@ -23,5 +27,5 @@ soundfile==0.12.1
 tqdm==4.66.2
 typing_extensions==4.9.0
 urllib3==2.2.1
-gpiozero~=2.0.1
-webrtcvad~=2.0.10
+webrtcvad==2.0.10
+zipp==3.17.0
