--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==4.2.0
+bidict==0.23.1
 blinker==1.7.0
 boto3==1.34.156
 botocore==1.34.156
@@ -12,6 +13,7 @@ distro==1.9.0
 exceptiongroup==1.2.0
 Flask==3.0.2
 Flask-Cors==4.0.0
+Flask-SocketIO==5.3.6
 gpiozero==2.0.1
 h11==0.14.0
 httpcore==1.0.3
@@ -32,9 +34,12 @@ pydantic_core==2.16.2
 pydub==0.25.1
 pygame==2.5.2
 python-dateutil==2.9.0.post0
+python-engineio==4.9.1
+python-socketio==5.11.3
 requests==2.31.0
 s3manager==1.4
 s3transfer==0.10.2
+simple-websocket==1.0.0
 six==1.16.0
 sniffio==1.3.0
 soundfile==0.12.1
@@ -43,6 +48,5 @@ typing_extensions==4.9.0
 urllib3==1.26.19
 webrtcvad==2.0.10
 Werkzeug==3.0.1
+wsproto==1.2.0
 zipp==3.17.0
-Flask-SocketIO~=5.3.7
-webrtcvad-wheels~=2.0.14
